# This file is a work of a US government employee and as such is in the Public domain.
# Simson L. Garfinkel, March 12, 2012 


EXTRA_DIST = FAQ.txt \
	announce_1.0.txt \
	announce_1.7.txt \
	announce_1.8.txt \
	announce_2.2.txt \
	announce_3.0.txt \
	announce_3.3.txt \
	announce_3.7.txt \
	crypto_api.txt \
	crypto_design.txt \
	crypto_doc.txt \
	filetypes.txt\
	threading.txt \
	upload.txt

