# We don't actually build LZMA; we just
# want to bring along the source code to satisfy LGPL requirements.

EXTRA_DIST = \
7zC.txt \
7zFormat.txt \
C/7zip/Archive/7z_C/7zAlloc.c \
C/7zip/Archive/7z_C/7zAlloc.h \
C/7zip/Archive/7z_C/7zBuffer.c \
C/7zip/Archive/7z_C/7zBuffer.h \
C/7zip/Archive/7z_C/7zCrc.c \
C/7zip/Archive/7z_C/7zCrc.h \
C/7zip/Archive/7z_C/7zDecode.c \
C/7zip/Archive/7z_C/7zDecode.h \
C/7zip/Archive/7z_C/7zExtract.c \
C/7zip/Archive/7z_C/7zExtract.h \
C/7zip/Archive/7z_C/7zHeader.c \
C/7zip/Archive/7z_C/7zHeader.h \
C/7zip/Archive/7z_C/7zIn.c \
C/7zip/Archive/7z_C/7zIn.h \
C/7zip/Archive/7z_C/7zItem.c \
C/7zip/Archive/7z_C/7zItem.h \
C/7zip/Archive/7z_C/7zMain.c \
C/7zip/Archive/7z_C/7zMethodID.c \
C/7zip/Archive/7z_C/7zMethodID.h \
C/7zip/Archive/7z_C/7zTypes.h \
C/7zip/Archive/7z_C/7z_C.dsp \
C/7zip/Archive/7z_C/7z_C.dsw \
C/7zip/Archive/7z_C/makefile \
C/7zip/Archive/7z_C/makefile.gcc \
C/7zip/Common/FileStreams.cpp \
C/7zip/Common/FileStreams.h \
C/7zip/Common/InBuffer.cpp \
C/7zip/Common/InBuffer.h \
C/7zip/Common/OutBuffer.cpp \
C/7zip/Common/OutBuffer.h \
C/7zip/Common/StdAfx.h \
C/7zip/Common/StreamUtils.cpp \
C/7zip/Common/StreamUtils.h \
C/7zip/Compress/Branch/ARM.cpp \
C/7zip/Compress/Branch/ARM.h \
C/7zip/Compress/Branch/ARMThumb.cpp \
C/7zip/Compress/Branch/ARMThumb.h \
C/7zip/Compress/Branch/BranchARM.c \
C/7zip/Compress/Branch/BranchARM.h \
C/7zip/Compress/Branch/BranchARMThumb.c \
C/7zip/Compress/Branch/BranchARMThumb.h \
C/7zip/Compress/Branch/BranchCoder.cpp \
C/7zip/Compress/Branch/BranchCoder.h \
C/7zip/Compress/Branch/BranchIA64.c \
C/7zip/Compress/Branch/BranchIA64.h \
C/7zip/Compress/Branch/BranchPPC.c \
C/7zip/Compress/Branch/BranchPPC.h \
C/7zip/Compress/Branch/BranchSPARC.c \
C/7zip/Compress/Branch/BranchSPARC.h \
C/7zip/Compress/Branch/BranchTypes.h \
C/7zip/Compress/Branch/BranchX86.c \
C/7zip/Compress/Branch/BranchX86.h \
C/7zip/Compress/Branch/IA64.cpp \
C/7zip/Compress/Branch/IA64.h \
C/7zip/Compress/Branch/PPC.cpp \
C/7zip/Compress/Branch/PPC.h \
C/7zip/Compress/Branch/SPARC.cpp \
C/7zip/Compress/Branch/SPARC.h \
C/7zip/Compress/Branch/StdAfx.h \
C/7zip/Compress/Branch/x86.cpp \
C/7zip/Compress/Branch/x86.h \
C/7zip/Compress/Branch/x86_2.cpp \
C/7zip/Compress/Branch/x86_2.h \
C/7zip/Compress/LZ/BinTree/BinTree.h \
C/7zip/Compress/LZ/BinTree/BinTree2.h \
C/7zip/Compress/LZ/BinTree/BinTree3.h \
C/7zip/Compress/LZ/BinTree/BinTree3Z.h \
C/7zip/Compress/LZ/BinTree/BinTree4.h \
C/7zip/Compress/LZ/BinTree/BinTreeMain.h \
C/7zip/Compress/LZ/HashChain/HC2.h \
C/7zip/Compress/LZ/HashChain/HC3.h \
C/7zip/Compress/LZ/HashChain/HC4.h \
C/7zip/Compress/LZ/HashChain/HCMain.h \
C/7zip/Compress/LZ/IMatchFinder.h \
C/7zip/Compress/LZ/LZInWindow.cpp \
C/7zip/Compress/LZ/LZInWindow.h \
C/7zip/Compress/LZ/LZOutWindow.cpp \
C/7zip/Compress/LZ/LZOutWindow.h \
C/7zip/Compress/LZ/StdAfx.h \
C/7zip/Compress/LZMA/LZMA.h \
C/7zip/Compress/LZMA/LZMADecoder.cpp \
C/7zip/Compress/LZMA/LZMADecoder.h \
C/7zip/Compress/LZMA/LZMAEncoder.cpp \
C/7zip/Compress/LZMA/LZMAEncoder.h \
C/7zip/Compress/LZMA/StdAfx.h \
C/7zip/Compress/LZMA_Alone/AloneLZMA.dsp \
C/7zip/Compress/LZMA_Alone/AloneLZMA.dsw \
C/7zip/Compress/LZMA_Alone/LzmaAlone.cpp \
C/7zip/Compress/LZMA_Alone/LzmaBench.cpp \
C/7zip/Compress/LZMA_Alone/LzmaBench.h \
C/7zip/Compress/LZMA_Alone/LzmaRam.cpp \
C/7zip/Compress/LZMA_Alone/LzmaRam.h \
C/7zip/Compress/LZMA_Alone/LzmaRamDecode.c \
C/7zip/Compress/LZMA_Alone/LzmaRamDecode.h \
C/7zip/Compress/LZMA_Alone/StdAfx.cpp \
C/7zip/Compress/LZMA_Alone/StdAfx.h \
C/7zip/Compress/LZMA_Alone/makefile \
C/7zip/Compress/LZMA_Alone/makefile.gcc \
C/7zip/Compress/LZMA_C/LzmaDecode.c \
C/7zip/Compress/LZMA_C/LzmaDecode.h \
C/7zip/Compress/LZMA_C/LzmaDecodeSize.c \
C/7zip/Compress/LZMA_C/LzmaStateDecode.c \
C/7zip/Compress/LZMA_C/LzmaStateDecode.h \
C/7zip/Compress/LZMA_C/LzmaStateTest.c \
C/7zip/Compress/LZMA_C/LzmaTest.c \
C/7zip/Compress/LZMA_C/LzmaTypes.h \
C/7zip/Compress/LZMA_C/makefile \
C/7zip/Compress/LZMA_C/makefile.gcc \
C/7zip/Compress/RangeCoder/RangeCoder.h \
C/7zip/Compress/RangeCoder/RangeCoderBit.cpp \
C/7zip/Compress/RangeCoder/RangeCoderBit.h \
C/7zip/Compress/RangeCoder/RangeCoderBitTree.h \
C/7zip/Compress/RangeCoder/RangeCoderOpt.h \
C/7zip/Compress/RangeCoder/StdAfx.h \
C/7zip/ICoder.h \
C/7zip/IStream.h \
C/Common/Alloc.cpp \
C/Common/Alloc.h \
C/Common/CRC.cpp \
C/Common/CRC.h \
C/Common/C_FileIO.cpp \
C/Common/C_FileIO.h \
C/Common/ComTry.h \
C/Common/CommandLineParser.cpp \
C/Common/CommandLineParser.h \
C/Common/Defs.h \
C/Common/MyCom.h \
C/Common/MyGuidDef.h \
C/Common/MyInitGuid.h \
C/Common/MyUnknown.h \
C/Common/MyWindows.h \
C/Common/NewHandler.cpp \
C/Common/NewHandler.h \
C/Common/StdAfx.h \
C/Common/String.cpp \
C/Common/String.h \
C/Common/StringConvert.cpp \
C/Common/StringConvert.h \
C/Common/StringToInt.cpp \
C/Common/StringToInt.h \
C/Common/Types.h \
C/Common/Vector.cpp \
C/Common/Vector.h \
C/Windows/Defs.h \
C/Windows/FileIO.cpp \
C/Windows/FileIO.h \
C/Windows/StdAfx.h \
LGPL.txt \
Methods.txt \
history.txt \
lzma.txt 
